--- a/html/debtpayoffcalc.html
+++ b/html/debtpayoffcalc.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Debt Payoff Calculator</title>
-    <link rel="stylesheet" href="../css/style.css"> 
+    <link rel="stylesheet" href="../css/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         /* General Body Styles for sticky footer layout */
         body {
@@ -23,7 +24,7 @@
         }
 
         .calculator-container {
-            max-width: 480px; /* Slightly wider than standard, narrower than rent vs buy */
+            max-width: 960px; /* Increased width to accommodate two charts side-by-side */
             padding: 30px;
             background-color: #ffffff; /* Added background for clarity */
             border-radius: 8px;
@@ -87,12 +88,24 @@
             margin-top: 30px;
             padding-top: 20px;
             border-top: 2px solid #eee;
-            text-align: center; /* Center the results text */
+            display: flex;
+            flex-wrap: wrap; /* Allow items to wrap on smaller screens */
+            justify-content: space-around; /* Distribute items with space */
+            gap: 20px; /* Space between flex items */
+        }
+
+        .results-summary {
+            flex: 1; /* Allows it to grow and shrink */
+            min-width: 280px; /* Minimum width for the summary section */
+            text-align: center;
+            margin-bottom: 20px; /* Add margin below summary before charts on smaller screens */
         }
         
         .results h2 {
             margin-top: 0; /* Remove default h2 margin */
             color: #333;
+            font-size: 1.5em;
+            margin-bottom: 10px;
         }
 
         .results p.label {
@@ -122,6 +135,44 @@
             font-size: 1.5em;
         }
 
+        hr {
+            border: none;
+            border-top: 1px solid #ddd;
+            margin: 20px 0;
+            width: 100%;
+        }
+
+        .chart-container {
+            flex: 1; /* Allows charts to grow and shrink */
+            min-width: 320px; /* Minimum width for each chart */
+            max-width: 450px; /* Max width to ensure they don't get too big */
+            height: 350px; /* Fixed height for the chart container */
+            position: relative;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            padding: 10px;
+            background-color: #fcfcfc;
+            box-sizing: border-box;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-bottom: 20px; /* Space below charts on smaller screens */
+        }
+
+        .chart-container h3 {
+            margin-top: 0;
+            color: #333;
+            font-size: 1.2em;
+            margin-bottom: 10px;
+            text-align: center;
+            width: 100%;
+        }
+
+        .chart-container canvas {
+            max-width: 100%;
+            height: 300px; /* Adjust canvas height to fit container */
+        }
+
         .back-link {
             display: block;
             margin-top: 30px;
@@ -149,6 +200,24 @@
         }
 
         /* Responsive adjustments */
+        @media (max-width: 960px) { /* Adjust breakpoint for chart stacking */
+            .calculator-container {
+                max-width: 600px; /* Revert to single chart width for tablets */
+            }
+            .results {
+                flex-direction: column; /* Stack summary and charts vertically */
+                align-items: center;
+            }
+            .results-summary {
+                width: 100%; /* Take full width on small screens */
+                max-width: unset; /* Remove max-width constraint */
+            }
+            .chart-container {
+                min-width: unset; /* Remove min-width for full flexibility */
+                width: 100%; /* Take full width on small screens */
+                max-width: 450px; /* Keep a max-width for charts even when stacked */
+            }
+        }
         @media (max-width: 600px) {
             .calculator-container {
                 padding: 20px;
@@ -161,6 +230,10 @@
             .input-group input,
             .input-group select {
                 width: 100%; /* Ensure inputs take full width */
+            }
+            .results h2, .results p.label, .results p.value, .results h3 {
+                text-align: center;
+                width: 100%;
             }
         }
     </style>
@@ -190,27 +263,37 @@
         <button id="calculateBtn">Calculate Payoff</button>
 
         <div class="results">
-            <h2>Results:</h2>
+            <div class="results-summary">
+                <h2>Results:</h2>
 
-            <h3>With Minimum Payment Only:</h3>
-            <p class="label">Time to Payoff:</p>
-            <p class="value" id="minPaymentTime">0 Years, 0 Months</p>
-            <p class="label">Total Interest Paid:</p>
-            <p class="value" id="minPaymentInterest">$0.00</p>
+                <h3>With Minimum Payment Only:</h3>
+                <p class="label">Time to Payoff:</p>
+                <p class="value" id="minPaymentTime">0 Years, 0 Months</p>
+                <p class="label">Total Interest Paid:</p>
+                <p class="value" id="minPaymentInterest">$0.00</p>
 
-            <h3>With Extra Payment ($<span id="displayExtraPayment">0.00</span> Total Monthly):</h3>
-            <p class="label">New Time to Payoff:</p>
-            <p class="value" id="extraPaymentTime">0 Years, 0 Months</p>
-            <p class="label">New Total Interest Paid:</p>
-            <p class="value" id="extraPaymentInterest">$0.00</p>
+                <h3>With Extra Payment ($<span id="displayExtraPayment">0.00</span> Total Monthly):</h3>
+                <p class="label">New Time to Payoff:</p>
+                <p class="value" id="extraPaymentTime">0 Years, 0 Months</p>
+                <p class="label">New Total Interest Paid:</p>
+                <p class="value" id="extraPaymentInterest">$0.00</p>
 
-            <hr>
+                <hr>
 
-            <h3>Total Savings:</h3>
-            <p class="label">Interest Saved:</p>
-            <p class="value saved-highlight" id="interestSaved">$0.00</p>
-            <p class="label">Time Saved:</p>
-            <p class="value saved-highlight" id="timeSaved">0 Years, 0 Months</p>
+                <h3>Total Savings:</h3>
+                <p class="label">Interest Saved:</p>
+                <p class="value saved-highlight" id="interestSaved">$0.00</p>
+                <p class="label">Time Saved:</p>
+                <p class="value saved-highlight" id="timeSaved">0 Years, 0 Months</p>
+            </div>
+            <div class="chart-container">
+                <h3>Total Interest Comparison</h3>
+                <canvas id="interestChart"></canvas>
+            </div>
+            <div class="chart-container">
+                <h3>Payoff Time Comparison</h3>
+                <canvas id="payoffTimeChart"></canvas>
+            </div>
         </div>
         <a href="../index.html" class="back-link">← Back to Main Calculators</a>
     </div>
